Refactors pokemon mapper's stat  property . Fix water type class not showing bug.

--- a/pokemon.css
+++ b/pokemon.css
@@ -15,7 +15,7 @@
 .type.Steel {
   background-color: rgb(121, 124, 124);
 }
-.type.Wwater {
+.type.Water {
   background-color: rgb(30, 117, 218);
 }
 .type.Fairy {
